--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+Spider-Ham<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -21,7 +21,7 @@
             <p class="parrafos" id="parrafo1">
                 Spider-Man es el superhéroe alter ego de Peter Parker, un joven que obtuvo poderes arácnidos
                 tras ser mordido por una araña radiactiva. Fue creado por Stan Lee y Steve Ditko, y apareció
-                por primera vez en Amazing Fantasy #15 en 1962. <a href="https://goo.su/rydBf">Mas de Spider-Man</a>
+                por primera vez en Amazing Fantasy #15 en 1962... <a href="https://goo.su/rydBf">Mas de Spider-Man</a>
             </p>
         </section>
         <hr>
